Release 1.1.0 (#30)
* Updating jkd version to 25.

# Conflicts:
#	docker/Dockerfile
#	pom.xml

* updates to streaming so that chunks are structured in json

* updates to streaming so that chunks are structured in json

* I hate docker

* I hate docker

* I hate docker

* I hate docker

* I hate docker

* this better work

* elicitation updates

* Updating user intent and prompt selection.

* Updates to streaming to add an init event and IDs so that streams can resume.

* Trying to remove duplicate assistant messages.

* accept user ID like I should have from the get go when updating a chat

* Injecting authentication into the stream pipeline sooner because it was getting lost.

* adjusting log levels

* updating the intent prompt so that it considers the conversation history

* lowering the temp on the intent prompt

* downgrading spring parent version

* documentation updates

* Updates to use nginx as the tls proxy

* fixing networking mode

* adding logback for the nginx profile

* updating the security config for the nginx config

* updating JwtUserRequestFilter for the nginx config

* updating SecurityConfig for the nginx config

* Updating to spring boot 4

* Updating the jackson configuration for the primitive `administrator` in AtlassianAccessToken

* Updating the jackson configuration for the primitive `administrator` in AtlassianAccessToken

* Updating the jackson configuration for the primitive `administrator` in AtlassianAccessToken

* Setting log level for `com.solesonic.security.atlassian` to DEBUG

* Setting log level for `com.solesonic.security.atlassian` to INFO

* Baseline commit before implementing streaming via reddis.

* Adding redis as a stream backbone to replace in memory hashmaps.

* Adding redis as a stream backbone to replace in memory hashmaps.

* Adding redis as a stream backbone to replace in memory hashmaps.

* Updating tests

* Removing StreamingChatService.java

* Adding security to docker-compose-redis.yml

* downgrade to redis 7

*